src/test/ui/editions/edition-imports-virtual-2015-ambiguity.stderr
error[E0659]: `Ambiguous` is ambiguous (name vs any other name during import resolution)
  --> <::edition_imports_2015::gen_ambiguous macros>:1:15
   |
LL | (  ) => { use Ambiguous ; type A = :: edition_imports_2015 :: Path ; }
   |               ^^^^^^^^^ ambiguous name
   |
note: `Ambiguous` could refer to the struct defined here
  --> $DIR/edition-imports-virtual-2015-ambiguity.rs:11:1
   |
LL | pub struct Ambiguous {}
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: `Ambiguous` could also refer to the struct defined here
  --> $DIR/edition-imports-virtual-2015-ambiguity.rs:14:5
   |
LL |     pub struct Ambiguous {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   = help: use `self::Ambiguous` to refer to this struct unambiguously

error[E0659]: `edition_imports_2015` is ambiguous (name in the crate root vs extern crate during absolute path resolution)
  --> <::edition_imports_2015::gen_ambiguous macros>:1:39
   |
LL | (  ) => { use Ambiguous ; type A = :: edition_imports_2015 :: Path ; }
   |                                       ^^^^^^^^^^^^^^^^^^^^ ambiguous name
   |
   = note: `edition_imports_2015` could refer to an extern crate passed with `--extern`
   = help: use `::edition_imports_2015` to refer to this extern crate unambiguously
note: `edition_imports_2015` could also refer to the module defined here
  --> $DIR/edition-imports-virtual-2015-ambiguity.rs:7:1
   |
LL | / mod edition_imports_2015 {
LL | |     pub struct Path;
LL | | }
   | |_^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0659`.
